--- a/source/assets/stylesheets/scss/components/_tag.scss
+++ b/source/assets/stylesheets/scss/components/_tag.scss
@@ -53,5 +53,13 @@
         }
       }
     }
+
+    .ch-nav.active & {
+      &--new {
+        &.ui.label {
+          font-size: .75em;
+        }
+      }
+    }
   }
 }
